# dialogue_memory_pipeline

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
dialogue_memory_pipeline/: .gitignore  README.md  pyproject.toml
dialogue_memory_pipeline/scripts/: generate_memory_data.py
dialogue_memory_pipeline/src/dialogue_memory_pipeline/clients/: llm_client.py
dialogue_memory_pipeline/src/dialogue_memory_pipeline/modules/: state_extractor.py
dialogue_memory_pipeline/src/dialogue_memory_pipeline/prompts/: __init__.py  extraction_prompt.py
docs/: chronomem_next_stage.md  dialogue_memory_pipeline.md  longmemeval_experiment_plan.md
examples/: from_env.py  from_openai.py
examples/dialogue_memory_pipeline/: from_env.py  from_openai.py
scripts/: demo.py  test_candidate_generator.py  test_state_extractor_llm.py
scripts/dialogue_memory_pipeline/: demo.py  generate_memory_data.py  test_candidate_generator.py  test_state_extractor_llm.py
src/dialogue_memory_pipeline/: __init__.py  config.py  pipeline.py
src/dialogue_memory_pipeline/clients/: __init__.py  llm_client.py
src/dialogue_memory_pipeline/core/: __init__.py  schemas.py
src/dialogue_memory_pipeline/data/: sample_dialogue.json
src/dialogue_memory_pipeline/modules/: candidate_generator.py  memory_builder.py  segment_state.py  state_extractor.py  transition_judge.py
src/dialogue_memory_pipeline/prompts/: candidate_prompt.py  extraction_prompt.py  memory_prompt.py
tests/: test_package_layout.py  test_save.py
tests/dialogue_memory_pipeline/: test_package_layout.py  test_save.py
